# shader_tester

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ChannelPanel.tsx  EditorPane.tsx  PreviewPane.tsx  ProjectLibrary.tsx  SetupPanel.tsx
src/lib/: defaultProject.ts  projectMigrations.ts  shaderTypes.ts  shadertoyImport.ts  shadertoyRuntime.ts  tauriApi.ts
src/styles/: app.css
